--- a/style.css
+++ b/style.css
@@ -3,18 +3,32 @@
     margin: 0;
     padding: 0;
 }
-
+html {
+    scroll-behavior: smooth;
+}
 body {
+    background-image: url(image/fundo.avif);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center center;
+    margin: 0;
+    padding: 0;
     font-size: 100%;
     font-family: sans-serif;
 }
 
-div, section, span, ul, li, a {
+div, header, section, span, ul, li, a {
     box-sizing: border-box;
+}
+section {
+    width: 100%;
+    height: 100vh;
 }
 
     /* Configurações */
 header {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     padding: 1em 2.5em;
@@ -24,18 +38,13 @@ header {
     z-index: 999;
 }
 
-section {
-    width: 100%;
-    height: 100vh;
-}
-
 h1 {
     text-align: center;
     padding: 2rem;
 }
 
-html {
-    scroll-behavior: smooth;
+#logo {
+    max-height: 10rem;
 }
 
 #menu li {
@@ -58,16 +67,13 @@ html {
     background-color: white;
 }
 
-#logo {
-    max-height: 10rem;
-}
-
 #inicio {
     background-color: #d4f387;
 }
 
 #sobrenos {
-    background-color: #aac965;
+    background-color: transparent;
+    padding: 50px 20px;
     color: white;
 }
 
@@ -86,32 +92,74 @@ html {
     color: white;
 }
 
-
-
 footer {
     background-color: #2d5a27;
     padding: 20px 0;
     text-align: center;
 }
 
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  display: inline-block;
-  text-align: center;
-  background-color: lightcoral;
-  border-radius: 8px;
-  padding: 20px;
+#card_footer {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    display: inline-block;
+    text-align: center;
+    background-color: lightcoral;
+    border-radius: 8px;
+    padding: 20px;
 }
 
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-.image-container {
+.card_footer_image {
     background-color: white;
 }
 
-.container {
+.card_footer_text {
   padding: 2px 16px;
+}
+
+.card_footer:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Receitas */
+#card_receita {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.card_receita_image {
+    background-color: #fff;
+    margin: 1.1em 1em;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px;
+    width: 30%;
+    min-width: 240px;
+    display: inline-block;
+}
+
+.card_receita_text {
+    padding: 1em 1.2em;
+
+    /* .card_receita_text h4 */
+    font-family: 'Times New Roman', Times;
+    font-size: medium;
+    font-style: italic;
+    color: cadetblue;
+}
+
+.card_receita_img {
+    border-radius: 5px 5px 0px 0px;
+    object-fit: cover;
+    width: 100%;
+    aspect-ratio: 16/9;
+    justify-content: center; /* Suposto centralizar a imagem do card */
+}
+
+.card_receita:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    scale: 1.02;
+    rotate: 2deg;
 }
