--- a/style.css
+++ b/style.css
@@ -69,6 +69,8 @@ h1 {
 
 #inicio {
     background-color: #d4f387;
+    padding: 6rem 0 0 0;
+    height: auto;
 }
 
 #sobrenos {
@@ -92,35 +94,34 @@ h1 {
     color: white;
 }
 
-footer {
-    background-color: #2d5a27;
-    padding: 20px 0;
+
+#sobrenos h2 {
+    color: #fff;
+    text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.8);
+    font-style: italic;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 60px;
     text-align: center;
+    justify-content: center;
 }
 
-#card_footer {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    display: inline-block;
-    text-align: center;
-    background-color: lightcoral;
-    border-radius: 8px;
-    padding: 20px;
+#sobrenos p {
+    background-color: rgba(0,0,0,0.5);
+    color: #fff;
+    font-size: 30px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding: 2%;
+    margin: 5%;
 }
 
-.card_footer_image {
-    background-color: white;
+/* Menu Inicio */
+#inicio img {
+    object-fit: cover;
+    width: 100%;
+    aspect-ratio: 16/9;
 }
 
-.card_footer_text {
-  padding: 2px 16px;
-}
-
-.card_footer:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-/* Receitas */
+/* Menu Receitas */
 #card_receita {
     width: 100%;
     display: flex;
@@ -150,16 +151,45 @@ footer {
     color: cadetblue;
 }
 
-.card_receita_img {
+.card_receita_image img {
     border-radius: 5px 5px 0px 0px;
     object-fit: cover;
     width: 100%;
     aspect-ratio: 16/9;
-    justify-content: center; /* Suposto centralizar a imagem do card */
 }
 
 .card_receita:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     scale: 1.02;
     rotate: 2deg;
+}
+
+
+/* Configurações para footer */
+footer {
+    background-color: #2d5a27;
+    padding: 20px 0;
+    text-align: center;
+}
+
+#card_footer {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    display: inline-block;
+    text-align: center;
+    background-color: lightcoral;
+    border-radius: 8px;
+    padding: 20px;
+}
+
+.card_footer_image {
+    background-color: white;
+}
+
+.card_footer_text {
+  padding: 2px 16px;
+}
+
+.card_footer:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
